Make BPM modal responsive on mobile
